# textual_4015_mre

./: pyproject.toml
.github/workflows/: pytest.yml
test/: test_main.py
textual_4015_mre/: __init__.py
